# revalue

./: .gitignore  README.md  config.py  dataset.py  model.py  pyproject.toml  trainer.py  utils.py
tb_logs/my_model_init_1/version_0/: events.out.tfevents.1708538276.Stefans-MacBook-Air.local.6100.0  events.out.tfevents.1708538613.Stefans-MacBook-Air.local.6100.1
tb_logs/my_model_init_2/version_0/: events.out.tfevents.1708538614.Stefans-MacBook-Air.local.6100.2  events.out.tfevents.1708539001.Stefans-MacBook-Air.local.6100.3
tb_logs/my_model_init_3/version_0/: events.out.tfevents.1708539001.Stefans-MacBook-Air.local.6100.4  events.out.tfevents.1708539413.Stefans-MacBook-Air.local.6100.5
tb_logs/my_model_init_4/version_0/: events.out.tfevents.1708539414.Stefans-MacBook-Air.local.6100.6  events.out.tfevents.1708539837.Stefans-MacBook-Air.local.6100.7
tb_logs/my_model_init_5/version_0/: events.out.tfevents.1708539838.Stefans-MacBook-Air.local.6100.8  events.out.tfevents.1708540099.Stefans-MacBook-Air.local.6100.9
