[tool.poetry]
name = "revalue-nature"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torchgeo = "^0.5.1"
torch = "^2.2.0"
rasterio = "^1.3.9"
click = "^8.1.7"
tensorboard = "^2.16.2"
black = "^24.2.0"
seaborn = "^0.13.2"
optuna = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

